fixed overflow issue

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -73,6 +73,9 @@ app-waving-water {
 @media only screen and (max-width: 800px) {
   .last {
     width: 100%;
+    padding: 0;
+    padding-top: 2%;
+    padding-bottom: 2%;
   }
 
   .last>h1 {
